--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <section class="container">
-
+    <h1 style="display: none">Feature</h1>
     <div class="col-lg-4 col-md-6 col-sm-12">
         <article class="featureCard">
             <div class="featureIconWrapper">
@@ -20,7 +20,7 @@
                      alt="Icon of pencil with ruler">
             </div>
             <div class="featureCardContent">
-                <h1>Easily Customised</h1>
+                <h3>Easily Customised</h3>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                    ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>
