Add container padding instead of margin

--- a/index.html
+++ b/index.html
@@ -11,97 +11,98 @@
 <body>
 
 
-<section class="container">
+<section>
     <h1 style="display: none">Feature</h1>
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="featureIconWrapper">
-                <img src="assets/icons/PencilAndRuler.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h3>Easily Customised</h3>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
-    </div>
+    <div class="container">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="featureIconWrapper">
+                    <img src="assets/icons/PencilAndRuler.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h3>Easily Customised</h3>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="iconWrapper">
-                <img src="assets/icons/Monitor.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h1>Responsive Ready</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare
-                   vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
-    </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="iconWrapper">
+                    <img src="assets/icons/Monitor.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h1>Responsive Ready</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare
+                       vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="iconWrapper">
-                <img src="assets/icons/Blob.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h1>Modern Design</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare
-                   vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
-    </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="iconWrapper">
+                    <img src="assets/icons/Blob.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h1>Modern Design</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare
+                       vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="iconWrapper">
-                <img src="assets/icons/Atom.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h1>Clean Code</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare
-                   vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
-    </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="iconWrapper">
+                    <img src="assets/icons/Atom.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h1>Clean Code</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare
+                       vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="iconWrapper">
-                <img src="assets/icons/Case.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h1>Ready to Ship</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare
-                   vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
-    </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="iconWrapper">
+                    <img src="assets/icons/Case.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h1>Ready to Ship</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare
+                       vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <article class="featureCard">
-            <div class="iconWrapper">
-                <img src="assets/icons/Download.png"
-                     alt="Icon of pencil with ruler">
-            </div>
-            <div class="featureCardContent">
-                <h1>Download for Free</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                   ornare
-                   vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-        </article>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <article class="featureCard">
+                <div class="iconWrapper">
+                    <img src="assets/icons/Download.png"
+                         alt="Icon of pencil with ruler">
+                </div>
+                <div class="featureCardContent">
+                    <h1>Download for Free</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                       ornare
+                       vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </article>
+        </div>
     </div>
-
 </section>
 
 
