--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <section>
-    <h2 style="display: none">Feature</h2>
+    <h2 class="hidden-heading">Features</h2>
     <div class="container">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <article class="featureCard">
