--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Easily Customised</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
-                       ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Easily Customised</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac
+                                                                                           facilisis in, egestas eget
+                                                                                           quam. Nullam quis risus eget
+                                                                                           urna mollis
+                                                                                           ornare vel eu leo. Donec
+                                                                                           ullamcorper nulla non metus
+                                                                                           auctor fringilla.</p>
                 </div>
             </article>
         </div>
@@ -35,8 +40,8 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Responsive Ready</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Responsive Ready</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                        ornare
                        vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
@@ -50,8 +55,8 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Modern Design</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Modern Design</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                        ornare
                        vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
@@ -65,8 +70,8 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Clean Code</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Clean Code</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                        ornare
                        vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
@@ -80,8 +85,8 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Ready to Ship</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Ready to Ship</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                        ornare
                        vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
@@ -95,8 +100,8 @@
                          alt="Icon of pencil with ruler">
                 </div>
                 <div class="featureCardContent">
-                    <h3>Download for Free</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    <h3 class="featureCard-title featureCard-title-line-clamp">Download for Free</h3>
+                    <p class="featureCard-title-line-clamp featureCard-title-line-clamp-p">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
                        ornare
                        vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
